--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.2.0",
     "@react-native-firebase/auth": "^8.1.2",
@@ -17,7 +20,7 @@
     "@react-navigation/stack": "^5.6.2",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
-    "firebase": "^7.16.0",
+    "firebase": "7.9.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
@@ -27,7 +30,8 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.4.0"
+    "react-navigation": "^4.4.0",
+    "react-router-native": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
